[package]
name = "insight"
version = "0.1.0"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"

[dependencies]
backtrace = "0.3"
failure = "0.1"
crossbeam = "0.7"
bitflags = "1"

slog = { version = "2", features = ["release_max_level_trace", "max_level_trace"] }
slog-async = "2"
slog-term = "2"

lazy_static = "1.3"